# rules_py_simple

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-rules_py_simple  bin.py  defs.bzl
internal/: BUILD.bazel  BUILD.dist.bazel.tpl  defs.bzl  launcher.bash.tpl  py_binary.bzl  py_binary_runner.bash.tpl  py_library.bzl  python_interpreter.bzl
test/binary_no_deps/: BUILD.bazel
tests/py_binary/app/: BUILD.bazel  app.py
tests/py_binary/app/lib/: BUILD.bazel  __init__.py
tests/py_binary/data_dependency/: BUILD.bazel  data.txt  data_dependency.py
tests/py_binary/many_src_files_test/: BUILD.bazel  many_src_files_test.py
tests/py_binary/src_files_test/: BUILD.bazel  src_files_test.py
tests/py_binary/transitive_target/: BUILD.bazel  transitive_target.py
tests/py_binary/transitive_target/my_lib/: BUILD.bazel
