py_runtime(
    name = "python3_runtime",
    files = ["@python_interpreter//:files"],
    interpreter = "@python_interpreter//:interpreter",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "py_toolchain",
    toolchain = ":python3_runtime",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
